processed/jira/txt/LU/LU-9830.txt
Key:        LU-9830
Summary:    string truncation from snprintf in libcfs/util/parser.c::Parser_list_commands()
Link:       https://jira.whamcloud.com/browse/LU-9830
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Duplicate
Assignee:   WC Triage
Reporter:   Oleg Drokin
Created:    Fri, 4 Aug 2017 15:48:14 +0000
Updated:    Wed, 21 Aug 2024 16:58:31 +0000
Resolved:   Wed, 21 Aug 2024 16:58:31 +0000
Links:      Related: is related to  LU-16392; Related: is related to  LU-6142

--- Description ---
Modern gcc warns that:

util/parser.c: In function Б─≤Parser_list_commandsБ─≥:
util/parser.c:575:25: error: Б─≤%2dБ─≥ directive output may be truncated writing between 2 and 10 bytes into a region of size 4 [-Werror=format-truncation=]
    snprintf(fmt, 6, "%%-%2ds", char_max - len);
                         ^~~
util/parser.c:575:21: note: directive argument in the range [1, 2147483647]
    snprintf(fmt, 6, "%%-%2ds", char_max - len);
                     ^~~~~~~~~
util/parser.c:575:4: note: Б─≤snprintfБ─≥ output between 6 and 14 bytes into a destination of size 6
    snprintf(fmt, 6, "%%-%2ds", char_max - len);
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
make[4]: *** [autoMakefile:669: libcfsutil_a-parser.o] Error 1
make[4]: Leaving directory '/home/green/smt/git/lustre-release/libcfs/libcfs'

there's some funky business going on with presumed column width so I guess we cannot just increase 6 to 14?

--- Comment (pjones, Wed, 21 Aug 2024 16:58:31 +0000) ---
Fixed under LU-16392

--- Comment (adilger, Wed, 21 Aug 2024 16:37:02 +0000) ---
Fixed in commit v2_15_53-135-gb4cc570ad11c

--- Comment (adilger, Wed, 21 Aug 2024 16:36:03 +0000) ---
The command truncation was fixed by patch https://review.whamcloud.com/49484 "LU-16392 utils: use --list-commands for bash completion".

--- Comment (simmonsja, Wed, 21 Aug 2024 16:12:51 +0000) ---
Is this resolved ?

--- Comment (adilger, Fri, 21 Jan 2022 02:00:57 +0000) ---
The compiler problems were fixed with patch https://review.whamcloud.com/35384 "LU-6142 util: Fix style issues for parser.c", but there are still a couple of commands truncated by one character - "changelog_deregister" and "lustre_build_version".  The latter could likely be removed - it was superseded in v2_6_50_0-16-g593b6ab6d219 with "lctl get_param version" and "--version", but "changelog_deregister" can't.

It would probably make sense to add a check to prevent new commands > 19 characters in length from being added.

--- Comment (jhammond, Wed, 22 Aug 2018 14:39:33 +0000) ---
This does cause some commands names to be truncated in the output of lctl --list-commands:

o:~# lctl --list-commands
...
help                lustre_build_versio exit                quit                
...
changelog_register  changelog_deregiste
